add a float to the page add a new image and a new well with contact info.

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,3 +52,15 @@ footer{
   padding: 3px;
   margin-bottom: 15px ;
 }
+.newme{
+  height: 200px;
+  width: 150px;
+  float: right;
+  padding: 8px;
+  border: yellow solid 3px
+}
+.profile{
+  text-align: center;
+  margin-top: 5px;
+  padding: 4px;
+}
