--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,9 @@ footer{
   width: 150px;
   float: right;
   padding: 8px;
-  border: yellow solid 3px
+  border: yellow solid 3px;
+  
+
 }
 .profile{
   text-align: center;
